--- a/src/views/users/profile.html
+++ b/src/views/users/profile.html
@@ -7,7 +7,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="/assets/extras/img/apple-icon.png">
   <link rel="icon" type="image/png" href="/assets/extras/img/favicon.png">
   <title>
-    Twinty | Update User
+    Twinty | User Profile
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -34,7 +34,27 @@
     <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/merchants/dashboard">
+            <a class="nav-link" href="/merchants/dashboard">
+              <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                <svg width="12px" height="12px" viewBox="0 0 42 42" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <title>office</title>
+                  <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g transform="translate(-1869.000000, -293.000000)" fill="#FFFFFF" fill-rule="nonzero">
+                      <g transform="translate(1716.000000, 291.000000)">
+                        <g id="office" transform="translate(153.000000, 2.000000)">
+                          <path class="color-background opacity-6" d="M12.25,17.5 L8.75,17.5 L8.75,1.75 C8.75,0.78225 9.53225,0 10.5,0 L31.5,0 C32.46775,0 33.25,0.78225 33.25,1.75 L33.25,12.25 L29.75,12.25 L29.75,3.5 L12.25,3.5 L12.25,17.5 Z"></path>
+                          <path class="color-background" d="M40.25,14 L24.5,14 C23.53225,14 22.75,14.78225 22.75,15.75 L22.75,38.5 L19.25,38.5 L19.25,22.75 C19.25,21.78225 18.46775,21 17.5,21 L1.75,21 C0.78225,21 0,21.78225 0,22.75 L0,40.25 C0,41.21775 0.78225,42 1.75,42 L40.25,42 C41.21775,42 42,41.21775 42,40.25 L42,15.75 C42,14.78225 41.21775,14 40.25,14 Z M12.25,36.75 L7,36.75 L7,33.25 L12.25,33.25 L12.25,36.75 Z M12.25,29.75 L7,29.75 L7,26.25 L12.25,26.25 L12.25,29.75 Z M35,36.75 L29.75,36.75 L29.75,33.25 L35,33.25 L35,36.75 Z M35,29.75 L29.75,29.75 L29.75,26.25 L35,26.25 L35,29.75 Z M35,22.75 L29.75,22.75 L29.75,19.25 L35,19.25 L35,22.75 Z"></path>
+                        </g>
+                      </g>
+                    </g>
+                  </g>
+                </svg>
+              </div>
+              <span class="nav-link-text ms-1">Dashboard</span>
+            </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/merchants/transactions">
             <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <svg width="12px" height="12px" viewBox="0 0 42 42" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <title>office</title>
@@ -54,7 +74,27 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/merchants/profile">
+            <a class="nav-link" href="/merchants/customers">
+              <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                <svg width="12px" height="12px" viewBox="0 0 42 42" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <title>office</title>
+                  <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g transform="translate(-1869.000000, -293.000000)" fill="#FFFFFF" fill-rule="nonzero">
+                      <g transform="translate(1716.000000, 291.000000)">
+                        <g id="office" transform="translate(153.000000, 2.000000)">
+                          <path class="color-background opacity-6" d="M12.25,17.5 L8.75,17.5 L8.75,1.75 C8.75,0.78225 9.53225,0 10.5,0 L31.5,0 C32.46775,0 33.25,0.78225 33.25,1.75 L33.25,12.25 L29.75,12.25 L29.75,3.5 L12.25,3.5 L12.25,17.5 Z"></path>
+                          <path class="color-background" d="M40.25,14 L24.5,14 C23.53225,14 22.75,14.78225 22.75,15.75 L22.75,38.5 L19.25,38.5 L19.25,22.75 C19.25,21.78225 18.46775,21 17.5,21 L1.75,21 C0.78225,21 0,21.78225 0,22.75 L0,40.25 C0,41.21775 0.78225,42 1.75,42 L40.25,42 C41.21775,42 42,41.21775 42,40.25 L42,15.75 C42,14.78225 41.21775,14 40.25,14 Z M12.25,36.75 L7,36.75 L7,33.25 L12.25,33.25 L12.25,36.75 Z M12.25,29.75 L7,29.75 L7,26.25 L12.25,26.25 L12.25,29.75 Z M35,36.75 L29.75,36.75 L29.75,33.25 L35,33.25 L35,36.75 Z M35,29.75 L29.75,29.75 L29.75,26.25 L35,26.25 L35,29.75 Z M35,22.75 L29.75,22.75 L29.75,19.25 L35,19.25 L35,22.75 Z"></path>
+                        </g>
+                      </g>
+                    </g>
+                  </g>
+                </svg>
+              </div>
+              <span class="nav-link-text ms-1">Customers</span>
+            </a>
+          </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="#">
             <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <svg width="12px" height="12px" viewBox="0 0 46 42" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <title>customer-support</title>
@@ -71,7 +111,7 @@
                 </g>
               </svg>
             </div>
-            <span class="nav-link-text ms-1">Users</span>
+            <span class="nav-link-text ms-1">Profile</span>
           </a>
         </li>
       </ul>
@@ -82,7 +122,7 @@
     <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur" navbar-scroll="true">
       <div class="container-fluid py-1 px-3">
         <nav aria-label="breadcrumb">
-          <h6 class="font-weight-bolder mb-0">Create User</h6>
+          <h6 class="font-weight-bolder mb-0">{{ user.name }} Profile</h6>
         </nav>
         <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
           <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -93,7 +133,7 @@
           </div>
           <ul class="navbar-nav  justify-content-end">
             <li class="nav-item d-flex align-items-center">
-              <a href="/admin/logout" class="nav-link text-body font-weight-bold px-0">
+              <a href="/merchants/logout" class="nav-link text-body font-weight-bold px-0">
                 <i class="fa fa-user me-sm-1"></i>
                 <span class="d-sm-inline d-none">Logout</span>
               </a>
@@ -117,7 +157,7 @@
         <div class="col-8 mx-auto">
           <div class="card mb-4">
             <div class="card-header pb-0">
-              <h6>Create a new user</h6>
+              <h6>Update Profile</h6>
             </div>
             <div class="card-body px-4 pt-0 pb-4">
                 <div class="bg-danger text-white rounded px-2">
@@ -125,18 +165,30 @@
                     <p>{{.}}</p>
                     {{/error}}
                 </div>
-                <form role="form" action="/admin/user/create" method="POST">
+                <form role="form" action="/merchants/profile" method="POST">
                     <label>Name</label>
                     <div class="mb-3">
-                    <input type="text" name="name" class="form-control" placeholder="Name" aria-label="Name" aria-describedby="name-addon">
+                    <input type="text" name="name" class="form-control" placeholder="Name" aria-label="Name" aria-describedby="name-addon" value="{{ user.name }}">
                     </div>
                     <label>Email</label>
                     <div class="mb-3">
-                    <input type="email" name="email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="email-addon">
+                    <input disabled type="email" name="email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="email-addon" value="{{ user.email }}">
                     </div>
                     <label>Merchant Id</label>
                     <div class="mb-3">
-                    <input type="text" name="merchantid" class="form-control" placeholder="Merchant Id" aria-label="Merchant Id" aria-describedby="merchantid-addon">
+                    <input disabled type="text" name="merchantid" class="form-control" placeholder="Merchant Id" aria-label="Merchant Id" aria-describedby="merchantid-addon" value="{{ user.merchantid }}">
+                    </div>
+                    <label>Password</label>
+                    <div class="mb-3">
+                    <input type="text" name="password" class="form-control" placeholder="Merchant Id" aria-label="Merchant Id" aria-describedby="merchantid-addon" value="{{ user.password }}">
+                    </div>
+                    <label>API KEY</label>
+                    <div class="mb-3">
+                    <input disabled type="text" name="apiKey" class="form-control" placeholder="Merchant Id" aria-label="Merchant Id" aria-describedby="merchantid-addon" value="{{ user.apiKey }}">
+                    </div>
+                    <label>API SECRET</label>
+                    <div class="mb-3">
+                    <input disabled type="text" name="apiSecret" class="form-control" placeholder="Merchant Id" aria-label="Merchant Id" aria-describedby="merchantid-addon" value="{{ user.apiSecret }}">
                     </div>
                     <div class="text-center">
                     <button type="submit" class="btn bg-gradient-info w-100 mt-4 mb-0">Create</button>
