--- a/src/views/users/transaction.html
+++ b/src/views/users/transaction.html
@@ -29,14 +29,14 @@
                 aria-hidden="true" id="iconSidenav"></i>
             <a class="navbar-brand m-0" href="#">
                 <img src="/assets/extras/img/logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
-                <span class="ms-1 font-weight-bold">Admin</span>
+                <span class="ms-1 font-weight-bold">Twinty</span>
             </a>
         </div>
         <hr class="horizontal dark mt-0">
         <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/admin/dashboard">
+                    <a class="nav-link" href="/merchants/dashboard">
                         <div
                             class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                             <svg width="12px" height="12px" viewBox="0 0 42 42" version="1.1"
@@ -63,7 +63,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/admin/users">
+                    <a class="nav-link" href="/merchants/profile">
                         <div
                             class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                             <svg width="12px" height="12px" viewBox="0 0 46 42" version="1.1"
@@ -113,7 +113,7 @@
                     </div>
                     <ul class="navbar-nav  justify-content-end">
                         <li class="nav-item d-flex align-items-center">
-                            <a href="/admin/logout" class="nav-link text-body font-weight-bold px-0">
+                            <a href="/merchants/logout" class="nav-link text-body font-weight-bold px-0">
                               <i class="fa fa-user me-sm-1"></i>
                               <span class="d-sm-inline d-none">Logout</span>
                             </a>
@@ -148,6 +148,24 @@
                                     <div class="timeline-content">
                                         <h6 class="text-dark text-sm font-weight-bold mb-0">Name</h6>
                                         <p class="text-secondary font-weight-bold text-xs mt-1 mb-0">{{ transaction.name }}</p>
+                                    </div>
+                                </div>
+                                <div class="timeline-block mb-3">
+                                    <span class="timeline-step">
+                                        <i class="ni ni-bold-right text-dark text-gradient"></i>
+                                    </span>
+                                    <div class="timeline-content">
+                                        <h6 class="text-dark text-sm font-weight-bold mb-0">Transaction Code</h6>
+                                        <p class="text-secondary font-weight-bold text-xs mt-1 mb-0 text-danger">{{ transaction.state.code }}</p>
+                                    </div>
+                                </div>
+                                <div class="timeline-block mb-3">
+                                    <span class="timeline-step">
+                                        <i class="ni ni-bold-right text-dark text-gradient"></i>
+                                    </span>
+                                    <div class="timeline-content">
+                                        <h6 class="text-dark text-sm font-weight-bold mb-0">State</h6>
+                                        <p class="text-secondary font-weight-bold text-xs mt-1 mb-0 text-danger">{{ transaction.state.result }}</p>
                                     </div>
                                 </div>
                                 <div class="timeline-block mb-3">
